suggestion are now in Worker, new MTGCardSmith ALPHA